PMD integration